--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "webpack",
     "watch": "webpack --watch",
-    "lint": "tslint 'src/{,**/}*.ts' 'spec/{,**/}*.ts' && prettier --check *.html"
+    "lint": "tslint 'src/{,**/}*.ts' 'spec/{,**/}*.ts' && prettier --check *.html",
+    "makePretty": "prettier --write \"src/**/*{.ts,.js}\"",
+    "isPretty": "prettier --check \"src/**/*{.ts,.js}\""
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,7 @@
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "nyc": "^15.0.0",
+    "prettier": "2.0.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
