--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@dedis/cothority": "^3.4.4",
     "d3": "^5.15.1",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uikit": "^3.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -26,9 +27,11 @@
     "@types/jasmine": "^3.5.0",
     "@types/long": "^4.0.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.5.3",
     "dockerode": "^3.0.2",
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "nyc": "^15.0.0",
     "prettier": "2.0.5",
     "ts-loader": "^6.2.1",
