--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
