--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@dedis/cothority": "^3.4.4",
         "d3": "^5.15.1",
         "rxjs": "^6.5.4",
+        "style-loader": "^1.2.1",
         "uikit": "^3.4.6"
     },
     "devDependencies": {
@@ -35,12 +36,14 @@
         "mini-css-extract-plugin": "^0.9.0",
         "nyc": "^15.0.0",
         "prettier": "2.0.5",
+        "sass": "^1.26.9",
+        "sass-loader": "^9.0.1",
         "ts-loader": "^6.2.1",
         "ts-node": "^8.5.4",
         "tslint": "^5.20.1",
         "typedoc": "^0.17.7",
         "typescript": "^3.9.3",
-        "webpack": "^4.41.5",
+        "webpack": "^4.43.0",
         "webpack-cli": "^3.3.10"
     }
 }
