--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Build
       run: |
-        echo "${{secrets.ROSTER}}" > src/roster.ts
+        mv src/roster.ts.template src/roster.ts
         npm run bundle
     
     - name: Sync
