--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@dedis/cothority": "^3.5.1",
+        "@download/blockies": "^1.0.3",
         "d3": "^5.16.0",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
