--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "license": "ISC",
     "dependencies": {
         "@dedis/cothority": "^3.5.1",
-        "@download/blockies": "^1.0.3",
+        "blockies-ts": "^1.0.0",
         "d3": "^5.16.0",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
+        "@types/blockies": "0.0.1",
         "@types/d3": "^5.7.2",
         "@types/dockerode": "^2.5.34",
         "@types/jasmine": "^3.5.12",
