--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "license": "ISC",
     "dependencies": {
         "@dedis/cothority": "^3.6.2",
+        "@types/uikit": "^3.3.1",
         "blockies-ts": "^1.0.0",
+        "css.gg": "^2.0.0",
         "d3": "^5.16.0",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
-        "uikit": "^3.5.8"
+        "uikit": "file:uikit"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
