--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "d3": "^5.16.0",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
-        "uikit": "file:uikit"
-    },
+        "uikit": "^3.5.6"
+        },
     "devDependencies": {
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
