--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -32,7 +32,7 @@ jobs:
         mv ./assets/icon.png ./
         mv ./assets/information-button-green.svg ./
         mv ./assets/information-button-red.svg ./
-        mv ./assets/icon.png ./
+        mv ./assets/logo color small.png ./
         echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
