Fixed version setup-node

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Wookiee deployment
+name: Wookiee DEV deployment
 
 on:
   push:
-    branches: [ production ]
+    branches: [ deploy-dev ]
 
 jobs:
   deploy:
@@ -11,14 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: actions/setup-node@v1.1.0
+    - uses: actions/setup-node@v1
       with:
         version: 12.x
 
     - name: Install dependencies
       run: |
         npm install
-
     - name: Build
       run: |
         mv src/roster.ts.template src/roster.ts
@@ -26,13 +25,14 @@ jobs:
     
     - name: Sync
       env:
-        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus'
+        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
       run: |
         mv ./assets/favicon.ico ./
         mv ./assets/icon.png ./
-        mv ./assets/information-button-red.svg ./
         mv ./assets/information-button-green.svg ./
-        echo "${{secrets.DEPLOY_KEY}}" > deploy_key
+        mv ./assets/information-button-red.svg ./
+        mv ./assets/logo color small.png ./
+        echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
