Removed all images

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Wookiee DEV deployment
+name: Wookiee deployment
 
 on:
   push:
-    branches: [ deploy-dev ]
+    branches: [ production ]
 
 jobs:
   deploy:
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         npm install
+
     - name: Build
       run: |
         mv src/roster.ts.template src/roster.ts
@@ -25,20 +26,14 @@ jobs:
     
     - name: Sync
       env:
-        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
+        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus'
       run: |
-        mv ./assets/information-button-green.svg ./
-        mv ./assets/information-button-red.svg ./
-        mv ./assets/logo color small.png ./
-        echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
+        echo "${{secrets.DEPLOY_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
           --exclude='.DS_Store' \
           --include=index.html \
-          --include=information-button-green.svg ./
-          --include=information-button-red.svg ./
-          --include=logo color small.png ./
           --include='dist/***' \
           --exclude='*' \
           ./ ${{env.dest}}
