--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,14 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: actions/setup-node@v1.1.0
+    - uses: actions/setup-node@v1
       with:
         version: 12.x
 
     - name: Install dependencies
       run: |
         npm install
-
     - name: Build
       run: |
         mv src/roster.ts.template src/roster.ts
@@ -28,16 +27,18 @@ jobs:
       env:
         dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
       run: |
-        mv ./assets/favicon.ico ./
-        mv ./assets/icon.png ./
+        mv ./assets/information-button-green.svg ./
+        mv ./assets/information-button-red.svg ./
+        mv ./assets/logo color small.png ./
         echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
           --exclude='.DS_Store' \
           --include=index.html \
-          --include=favicon.ico \
-          --include=icon.png \
+          --include=information-button-green.svg ./
+          --include=information-button-red.svg ./
+          --include=logo-color-small.png ./
           --include='dist/***' \
           --exclude='*' \
           ./ ${{env.dest}}
