Fixed image name

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,22 +28,18 @@ jobs:
       env:
         dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
       run: |
-        mv ./assets/favicon.ico ./
-        mv ./assets/icon.png ./
         mv ./assets/information-button-green.svg ./
         mv ./assets/information-button-red.svg ./
-        mv ./assets/logo color small.png ./
+        mv ./assets/logo-color-small.png ./
         echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
           --exclude='.DS_Store' \
           --include=index.html \
-          --include=favicon.ico \
-          --include=icon.png \
           --include=information-button-green.svg ./
           --include=information-button-red.svg ./
-          --include=logo color small.png ./
+          --include=logo-color-small.png ./
           --include='dist/***' \
           --exclude='*' \
           ./ ${{env.dest}}
