Fixes the deploy-dev action

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,9 +37,9 @@ jobs:
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
           --exclude='.DS_Store' \
           --include=index.html \
-          --include=information-button-green.svg ./
-          --include=information-button-red.svg ./
-          --include=logo-color-small.png ./
+          --include=information-button-green.svg \
+          --include=information-button-red.svg \
+          --include=logo-color-small.png \
           --include='dist/***' \
           --exclude='*' \
           ./ ${{env.dest}}
