Includes assets/ folder

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -27,18 +27,17 @@ jobs:
       env:
         dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
       run: |
-        mv ./assets/information-button-green.svg ./
-        mv ./assets/information-button-red.svg ./
-        mv ./assets/logo-color-small.png ./
-        echo "${{secrets.DEPLOY_DEV_KEY}}" > deploy_key
+        mv ./assets/favicon.ico ./
+        mv ./assets/icon.png ./
+        echo "${{secrets.DEPLOY_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
           -e 'ssh -p ${{secrets.DEPLOY_PORT}} -i ./deploy_key -o StrictHostKeyChecking=no' \
           --exclude='.DS_Store' \
           --include=index.html \
-          --include=information-button-green.svg \
-          --include=information-button-red.svg \
-          --include=logo-color-small.png \
+          --include=favicon.ico \
+          --include=icon.png \
           --include='dist/***' \
+          --include='assets/***' \
           --exclude='*' \
           ./ ${{env.dest}}
