Another attempt at fixing versionning

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -43,5 +43,5 @@ jobs:
           ./ ${{env.dest}}
     - name: Update version number
       run: |
-          TIMESTAMP=date '+%s'
-          sed -i "s/VERSIONNUMBER/$TIMESTAMP" index.html
+          timestamp() {date +"%s" # current time}
+          sed -i "s/VERSIONNUMBER/$(timestamp)" index.html
