--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,7 +24,7 @@ jobs:
           timestamp() {   
             date +"%s" 
                       }
-          sed -i "s/VERSIONNUMBER/$(timestamp)/" index.html
+          sed -i "s|dist/bundle.min.js?v=VERSIONNUMBER|dist/bundle.min.js?v=$(timestamp)|" index.html
 
     - name: Build
       run: |
