Columbus 1.0.0 (#49) (end of fall 2020 semester project)
This PR closes the fall 2020 semester project, by @sophiartl  and @LucasTrg .

* Added Blockies dependency

* merge

* Fixed a dispay bug related to the merge

* Squashed another bug that appeared after the merge

* merge

* fixed nav

* Reinstalled blockies and first implementation

The version I previously installed was not behaving correctly with the stack so I made the switch to a ts supported version, the algorithm is basically the same albeit the doc is somewhat less readable

* Added a field for block heights

* Prettified everything

* cketch of arrowdAdded sketch oof arrows

* Improved arrow display

* fix arrow  proportions

* start last block

* display from last block

* Changed last container side

* fixed arrows

* Adjust axis

* Add text

* Moved the query results to the bottom of the screen

I had to refactor some old code, I have to polish the result (especially margins), after digging a bit in the querying, I might have identified some broken things and some inefficiencies

* Minor improvement and polish to the query results display

* Moved the loading screen to the bottom of the screen and modernized the spinner

Searching is not interrupting the browsing anymore, I cleaned some things a bit but introduced some redundant css while trying to display things right. I will try fixing it ASAP

* Added stickers

* Updated JS client, polished the queries displaying

* started adding tooltips

* fixed last added block info

* removed stickers

* Production roster and initalBlock index fixed

* Various fixes and improvements in the way things are displayed

* Added a copy to clipboard feature

It should only be called after a user generated input to work with all (most ?) browsers

* Quick fix for the display of the blockies

* Quick fix for the display of the forward link details

* Clearing a query correctly unhighlights the b

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -19,6 +19,13 @@ jobs:
       run: |
         npm install
         
+    - name: Update version number
+      run: |
+          timestamp() {   
+            date +"%s" 
+                      }
+          sed -i "s|dist/bundle.min.js?v=VERSIONNUMBER|dist/bundle.min.js?v=$(timestamp)|" index.html
+
     - name: Build
       run: |
         mv src/roster.ts.template src/roster.ts
@@ -26,7 +33,7 @@ jobs:
     
     - name: Sync
       env:
-        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev'
+        dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus-dev/'
       run: |
         mv ./assets/favicon.ico ./
         mv ./assets/icon.png ./
