--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@dedis/cothority": "^3.6.2",
+        "@dedis/cothority": "3.6.4-p2012.1814.1317.0",
+        "@types/uikit": "^3.3.1",
+        "blockies-ts": "^1.0.0",
+        "css.gg": "^2.0.0",
         "d3": "^5.16.0",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
-        "uikit": "^3.5.6"
+        "uikit": "^3.5.9"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
+        "@types/blockies": "0.0.1",
         "@types/d3": "^5.7.2",
         "@types/dockerode": "^2.5.34",
         "@types/jasmine": "^3.5.12",
