--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,13 @@ jobs:
       run: |
         npm install
 
+    - name: Update version number
+      run: |
+          timestamp() {   
+            date +"%s" 
+                      }
+          sed -i "s|dist/bundle.min.js?v=VERSIONNUMBER|dist/bundle.min.js?v=$(timestamp)|" index.html
+
     - name: Build
       run: |
         mv src/roster.ts.template src/roster.ts
