--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "blockies-ts": "^1.0.0",
         "css.gg": "^2.0.0",
         "d3": "^5.16.0",
+        "intro.js": "^3.3.1",
         "rxjs": "^6.6.2",
         "style-loader": "^1.2.1",
         "uikit": "^3.5.9"
