Updates intro.js loading
Intro.js was not bundled within the app, which works in local but not in production. This PR fixes the way intro.js is included using the correct npm package.
Note that it would be a good idea to store the `initIntro()` in a separate file.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/blockies": "0.0.1",
         "@types/d3": "^5.7.2",
         "@types/dockerode": "^2.5.34",
+        "@types/intro.js": "^3.0.0",
         "@types/jasmine": "^3.5.12",
         "@types/long": "^4.0.0",
         "babel-loader": "^8.0.6",
