--- a/package.json
+++ b/package.json
@@ -26,30 +26,39 @@
         "uikit": "^3.5.9"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.1",
-        "@babel/preset-env": "^7.11.0",
-        "@types/blockies": "0.0.1",
+        "@babel/core": "^7.12.13",
+        "@babel/preset-env": "^7.12.13",
+        "@types/blockies": "^0.0.2",
         "@types/d3": "^5.7.2",
-        "@types/dockerode": "^2.5.34",
-        "@types/intro.js": "^3.0.1",
-        "@types/jasmine": "^3.5.12",
-        "@types/long": "^4.0.0",
-        "babel-loader": "^8.0.6",
-        "css-loader": "^5.2.4",
-        "dockerode": "^3.2.1",
-        "jasmine": "^3.6.1",
+        "@types/dockerode": "^3.2.7",
+        "@types/intro.js": "^3.0.2",
+        "@types/jasmine": "^3.8.2",
+        "@types/long": "^4.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.15.0",
+        "@typescript-eslint/parser": "^4.15.0",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.0.2",
+        "dockerode": "^3.3.0",
+        "eslint": "^7.19.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "jasmine": "^3.8.0",
         "jasmine-console-reporter": "^3.1.0",
-        "mini-css-extract-plugin": "^0.9.0",
+        "mini-css-extract-plugin": "^2.2.0",
+        "node-polyfill-webpack-plugin": "^1.1.4",
         "nyc": "^15.1.0",
-        "prettier": "2.0.5",
-        "sass": "^1.26.10",
-        "sass-loader": "^9.0.3",
-        "ts-loader": "^6.2.1",
-        "ts-node": "^8.10.2",
-        "tslint": "^5.20.1",
-        "typedoc": "^0.17.8",
-        "typescript": "^3.9.7",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
+        "path-browserify": "^1.0.1",
+        "prettier": "^2.3.2",
+        "sass": "^1.32.7",
+        "sass-loader": "^11.0.1",
+        "stream-browserify": "^3.0.0",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^8.0.16",
+        "typedoc": "^0.21.5",
+        "typescript": "^4.1.3",
+        "webpack": "^5.21.2",
+        "webpack-cli": "^4.5.0"
     }
 }
