--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,7 @@ jobs:
       env:
         dest: 'jstech@${{secrets.DEPLOY_ADDR}}:/var/www/wookiee.ch/public_html/columbus'
       run: |
-        mv ./assets/favicon.ico ./
-        mv ./assets/icon.png ./
+        mv ./assets/* ./
         echo "${{secrets.DEPLOY_KEY}}" > deploy_key
         chmod 600 ./deploy_key
         rsync -chav --delete \
@@ -44,7 +43,8 @@ jobs:
           --exclude='.DS_Store' \
           --include=index.html \
           --include=favicon.ico \
-          --include=icon.png \
+          --include=*.png \
+          --include=*.svg \
           --include='dist/***' \
           --exclude='*' \
           ./ ${{env.dest}}
